First pass on implementing endpoints
