# swagger.yaml
@@ -35,8 +35,16 @@ paths:
       responses:
         200:
           description: "Successfully created"
+          schema:
+            $ref: "#/definitions/RecordOutput"
         400:
-          description: "Validation exception"
+          description: "Validation error"
+          schema:
+            $ref: "#/definitions/ValidationError"
+        500:
+          description: "Internal Server Error"
+          schema:
+            $ref: "#/definitions/InternalServerError"
       security:
       - flamedb_auth: []
     get:
@@ -53,12 +61,10 @@ paths:
       - name: offset
         in: query
         type: integer
-        format: int64
         minimum: 0
       - name: limit
         in: query
         type: integer
-        format: int64
         minimum: 0
         maximum: 1000
       - name: parent
@@ -84,6 +90,10 @@ paths:
           description: "Successful query"
           schema:
             $ref: "#/definitions/QueryResult"
+        500:
+          description: "Internal Server Error"
+          schema:
+            $ref: "#/definitions/InternalServerError"
       security:
       - flamedb_auth: []
   /records/{recordId}:
@@ -108,6 +118,8 @@ paths:
             $ref: "#/definitions/RecordOutput"
         404:
           description: "Record not found"
+          schema:
+            $ref: "#/definitions/NotFoundError"
       security:
       - flamedb_auth: []
     put:
@@ -139,8 +151,16 @@ paths:
             $ref: "#/definitions/RecordOutput"
         400:
           description: "Validation exception"
+          schema:
+            $ref: "#/definitions/ValidationError"
         404:
-          description: "Record not found"
+          description: "Not found"
+          schema:
+            $ref: "#/definitions/NotFoundError"
+        500:
+          description: "Internal Server Error"
+          schema:
+            $ref: "#/definitions/InternalServerError"
       security:
       - flamedb_auth: []
     delete:
@@ -158,8 +178,16 @@ paths:
         required: true
         type: string
       responses:
+        200:
+          description: "Record deleted"
         404:
           description: "Record not found"
+          schema:
+            $ref: "#/definitions/NotFoundError"
+        500:
+          description: "Internal Server Error"
+          schema:
+            $ref: "#/definitions/InternalServerError"
       security:
       - flamedb_auth: []
 definitions:
@@ -210,9 +238,9 @@ definitions:
   QueryResult:
     type: object
     required:
-    - items
+    - records
     properties:
-      items:
+      records:
         type: array
         items:
           $ref: "#/definitions/RecordOutput"
@@ -226,4 +254,25 @@ definitions:
       email:
         type: string
       token:
+        type: string
+  InternalServerError:
+    type: object
+    properties:
+      message:
+        type: string
+      error_type:
+        type: string
+  ValidationError:
+    type: object
+    properties:
+      message:
+        type: string
+      error_type:
+        type: string
+  NotFoundError:
+    type: object
+    properties:
+      message:
+        type: string
+      error_type:
         type: string
